[package]
name = "proto-lib"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib","lib"]
name = "proto_lib"
path = "src/lib.rs"


[dependencies]
prost = "0.12"
proto_schema = { git = "https://github.com/Dynamic-1001-GmbH/proto-schema-management.git", branch = "main" }

[build-dependencies]
prost-build = "0.12"