[package]
name = "proto-lib"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib","lib"]
name = "proto_lib"
path = "src/lib.rs"


[dependencies]
prost = "0.12"
prost-validate = { version = "0.2.9", features = ["derive"] }

[build-dependencies]
prost-build = "0.12"
prost-validate-build = "0.2.9"